dryadsynth/benchmarks/Generators/Parser/SygusParser.py
# Generated from Sygus.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class SygusParser ( Parser ):

    grammarFileName = "Sygus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'set-logic'", "')'", "'declare-var'", 
                     "'define-sort'", "'BitVec'", "'Int'", "'Bool'", "'Real'", 
                     "'Enum'", "'Array'", "'true'", "'false'", "'::'", "'set-options'", 
                     "'define-fun'", "'declare-fun'", "'let'", "'check-synth'", 
                     "'constraint'", "'synth-fun'", "'Constant'", "'Variable'", 
                     "'InputVariable'", "'LocalVariable'", "'synth-inv'", 
                     "'declare-primed-var'", "'inv-constraint'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WS", "COMMENT", "INTEGER", "BVCONST", 
                      "REALCONST", "QUOTEDLIT", "SYMBOL" ]

    RULE_start = 0
    RULE_prog = 1
    RULE_symbol = 2
    RULE_setLogicCmd = 3
    RULE_cmdPlus = 4
    RULE_cmdPlusTail = 5
    RULE_cmd = 6
    RULE_varDeclCmd = 7
    RULE_sortDefCmd = 8
    RULE_sortExpr = 9
    RULE_intConst = 10
    RULE_boolConst = 11
    RULE_bVConst = 12
    RULE_enumConst = 13
    RULE_realConst = 14
    RULE_eCList = 15
    RULE_symbolPlus = 16
    RULE_symbolPlusTail = 17
    RULE_setOptsCmd = 18
    RULE_optList = 19
    RULE_symbolPairPlus = 20
    RULE_symbolPairPlusTail = 21
    RULE_symbolPair = 22
    RULE_funDefCmd = 23
    RULE_funDeclCmd = 24
    RULE_sortStar = 25
    RULE_argList = 26
    RULE_symbolSortPairStar = 27
    RULE_symbolSortPair = 28
    RULE_term = 29
    RULE_letTerm = 30
    RULE_letBindingTermPlus = 31
    RULE_letBindingTermPlusTail = 32
    RULE_letBindingTerm = 33
    RULE_termStar = 34
    RULE_literal = 35
    RULE_nTDefPlus = 36
    RULE_nTDefPlusTail = 37
    RULE_nTDef = 38
    RULE_gTermPlus = 39
    RULE_gTermPlusTail = 40
    RULE_checkSynthCmd = 41
    RULE_constraintCmd = 42
    RULE_synthFunCmd = 43
    RULE_gTerm = 44
    RULE_letGTerm = 45
    RULE_letBindingGTermPlus = 46
    RULE_letBindingGTermPlusTail = 47
    RULE_letBindingGTerm = 48
    RULE_gTermStar = 49
    RULE_synthInvCmd = 50
    RULE_declarePrimedVar = 51
    RULE_invConstraintCmd = 52

    ruleNames =  [ "start", "prog", "symbol", "setLogicCmd", "cmdPlus", 
                   "cmdPlusTail", "cmd", "varDeclCmd", "sortDefCmd", "sortExpr", 
                   "intConst", "boolConst", "bVConst", "enumConst", "realConst", 
                   "eCList", "symbolPlus", "symbolPlusTail", "setOptsCmd", 
                   "optList", "symbolPairPlus", "symbolPairPlusTail", "symbolPair", 
                   "funDefCmd", "funDeclCmd", "sortStar", "argList", "symbolSortPairStar", 
                   "symbolSortPair", "term", "letTerm", "letBindingTermPlus", 
                   "letBindingTermPlusTail", "letBindingTerm", "termStar", 
                   "literal", "nTDefPlus", "nTDefPlusTail", "nTDef", "gTermPlus", 
                   "gTermPlusTail", "checkSynthCmd", "constraintCmd", "synthFunCmd", 
                   "gTerm", "letGTerm", "letBindingGTermPlus", "letBindingGTermPlusTail", 
                   "letBindingGTerm", "gTermStar", "synthInvCmd", "declarePrimedVar", 
                   "invConstraintCmd" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    WS=29
    COMMENT=30
    INTEGER=31
    BVCONST=32
    REALCONST=33
    QUOTEDLIT=34
    SYMBOL=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prog(self):
            return self.getTypedRuleContext(SygusParser.ProgContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = SygusParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SygusParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.prog()
                pass
            elif token in [SygusParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setLogicCmd(self):
            return self.getTypedRuleContext(SygusParser.SetLogicCmdContext,0)


        def cmdPlus(self):
            return self.getTypedRuleContext(SygusParser.CmdPlusContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SygusParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prog)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.setLogicCmd()
                self.state = 111
                self.cmdPlus()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.cmdPlus()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(SygusParser.SYMBOL, 0)

        def getRuleIndex(self):
            return SygusParser.RULE_symbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymbol" ):
                listener.enterSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymbol" ):
                listener.exitSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbol" ):
                return visitor.visitSymbol(self)
            else:
                return visitor.visitChildren(self)




    def symbol(self):

        localctx = SygusParser.SymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_symbol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(SygusParser.SYMBOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetLogicCmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self):
            return self.getTypedRuleContext(SygusParser.SymbolContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_setLogicCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetLogicCmd" ):
                listener.enterSetLogicCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetLogicCmd" ):
                listener.exitSetLogicCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetLogicCmd" ):
                return visitor.visitSetLogicCmd(self)
            else:
                return visitor.visitChildren(self)




    def setLogicCmd(self):

        localctx = SygusParser.SetLogicCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_setLogicCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(SygusParser.T__0)
            self.state = 119
            self.match(SygusParser.T__1)
            self.state = 120
            self.symbol()
            self.state = 121
            self.match(SygusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdPlusContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self):
            return self.getTypedRuleContext(SygusParser.CmdContext,0)


        def cmdPlusTail(self):
            return self.getTypedRuleContext(SygusParser.CmdPlusTailContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_cmdPlus

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdPlus" ):
                listener.enterCmdPlus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdPlus" ):
                listener.exitCmdPlus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdPlus" ):
                return visitor.visitCmdPlus(self)
            else:
                return visitor.visitChildren(self)




    def cmdPlus(self):

        localctx = SygusParser.CmdPlusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cmdPlus)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.cmd()
            self.state = 124
            self.cmdPlusTail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdPlusTailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self):
            return self.getTypedRuleContext(SygusParser.CmdContext,0)


        def cmdPlusTail(self):
            return self.getTypedRuleContext(SygusParser.CmdPlusTailContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_cmdPlusTail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdPlusTail" ):
                listener.enterCmdPlusTail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdPlusTail" ):
                listener.exitCmdPlusTail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmdPlusTail" ):
                return visitor.visitCmdPlusTail(self)
            else:
                return visitor.visitChildren(self)




    def cmdPlusTail(self):

        localctx = SygusParser.CmdPlusTailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cmdPlusTail)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SygusParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.cmd()
                self.state = 127
                self.cmdPlusTail()
                pass
            elif token in [SygusParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funDefCmd(self):
            return self.getTypedRuleContext(SygusParser.FunDefCmdContext,0)


        def funDeclCmd(self):
            return self.getTypedRuleContext(SygusParser.FunDeclCmdContext,0)


        def synthFunCmd(self):
            return self.getTypedRuleContext(SygusParser.SynthFunCmdContext,0)


        def checkSynthCmd(self):
            return self.getTypedRuleContext(SygusParser.CheckSynthCmdContext,0)


        def constraintCmd(self):
            return self.getTypedRuleContext(SygusParser.ConstraintCmdContext,0)


        def sortDefCmd(self):
            return self.getTypedRuleContext(SygusParser.SortDefCmdContext,0)


        def setOptsCmd(self):
            return self.getTypedRuleContext(SygusParser.SetOptsCmdContext,0)


        def varDeclCmd(self):
            return self.getTypedRuleContext(SygusParser.VarDeclCmdContext,0)


        def synthInvCmd(self):
            return self.getTypedRuleContext(SygusParser.SynthInvCmdContext,0)


        def declarePrimedVar(self):
            return self.getTypedRuleContext(SygusParser.DeclarePrimedVarContext,0)


        def invConstraintCmd(self):
            return self.getTypedRuleContext(SygusParser.InvConstraintCmdContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCmd" ):
                return visitor.visitCmd(self)
            else:
                return visitor.visitChildren(self)




    def cmd(self):

        localctx = SygusParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cmd)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.funDefCmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.funDeclCmd()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.synthFunCmd()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self.checkSynthCmd()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 136
                self.constraintCmd()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 137
                self.sortDefCmd()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 138
                self.setOptsCmd()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 139
                self.varDeclCmd()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 140
                self.synthInvCmd()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 141
                self.declarePrimedVar()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 142
                self.invConstraintCmd()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclCmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self):
            return self.getTypedRuleContext(SygusParser.SymbolContext,0)


        def sortExpr(self):
            return self.getTypedRuleContext(SygusParser.SortExprContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_varDeclCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclCmd" ):
                listener.enterVarDeclCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclCmd" ):
                listener.exitVarDeclCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclCmd" ):
                return visitor.visitVarDeclCmd(self)
            else:
                return visitor.visitChildren(self)




    def varDeclCmd(self):

        localctx = SygusParser.VarDeclCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varDeclCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(SygusParser.T__0)
            self.state = 146
            self.match(SygusParser.T__3)
            self.state = 147
            self.symbol()
            self.state = 148
            self.sortExpr()
            self.state = 149
            self.match(SygusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SortDefCmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self):
            return self.getTypedRuleContext(SygusParser.SymbolContext,0)


        def sortExpr(self):
            return self.getTypedRuleContext(SygusParser.SortExprContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_sortDefCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSortDefCmd" ):
                listener.enterSortDefCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSortDefCmd" ):
                listener.exitSortDefCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSortDefCmd" ):
                return visitor.visitSortDefCmd(self)
            else:
                return visitor.visitChildren(self)




    def sortDefCmd(self):

        localctx = SygusParser.SortDefCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sortDefCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(SygusParser.T__0)
            self.state = 152
            self.match(SygusParser.T__4)
            self.state = 153
            self.symbol()
            self.state = 154
            self.sortExpr()
            self.state = 155
            self.match(SygusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SortExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intConst(self):
            return self.getTypedRuleContext(SygusParser.IntConstContext,0)


        def eCList(self):
            return self.getTypedRuleContext(SygusParser.ECListContext,0)


        def sortExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SygusParser.SortExprContext)
            else:
                return self.getTypedRuleContext(SygusParser.SortExprContext,i)


        def symbol(self):
            return self.getTypedRuleContext(SygusParser.SymbolContext,0)


        def getRuleIndex(self):
            return SygusParser.RULE_sortExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSortExpr" ):
                listener.enterSortExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSortExpr" ):
                listener.exitSortExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSortExpr" ):
                return visitor.visitSortExpr(self)
            else:
                return visitor.visitChildren(self)




    def sortExpr(self):

        localctx = SygusParser.SortExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sortExpr)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(SygusParser.T__0)
                self.state = 158
                self.match(SygusParser.T__5)
                self.state = 159
                self.intConst()
                self.state = 160
                self.match(SygusParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.match(SygusParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.match(SygusParser.T__7)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.match(SygusParser.T__8)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 165
                self.match(SygusParser.T__0)
                self.state = 166
                self.match(SygusParser.T__9)
                self.state = 167
                self.eCList()
                self.state = 168
                self.match(SygusParser.T__2)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 170
                self.match(SygusParser.T__0)
                self.state = 171
                self.match(SygusParser.T__10)
                self.state = 172
                self.sortExpr()
                self.state = 173
                self.sortExpr()
                self.state = 174
                self.match(SygusParser.T__2)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 176
                self.symbol()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntConstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(SygusParser.INTEGER, 0)

        def getRuleIndex(self):
            return SygusParser.RULE_intConst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntConst" ):
                listener.enterIntConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntConst" ):
                listener.exitIntConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntConst" ):
                return visitor.visitIntConst(self)
            else:
                return visitor.visitChildren(self)




    def intConst(self):

        localctx = SygusParser.IntConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_intConst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(SygusParser.INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BoolConstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SygusParser.RULE_boolConst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolConst" ):
                listener.enterBoolConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolConst" ):
                listener.exitBoolConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolConst" ):
                return visitor.visitBoolConst(self)
            else:
                return visitor.visitChildren(self)




    def boolConst(self):

        localctx = SygusParser.BoolConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_boolConst)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            _la = self._input.LA(1)
            if not(_la==SygusParser.T__11 or _la==SygusParser.T__12):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BVConstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BVCONST(self):
            return self.getToken(SygusParser.BVCONST, 0)

        def getRuleIndex(self):
            return SygusParser.RULE_bVConst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBVConst" ):
                listener.enterBVConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBVConst" ):
                listener.exitBVConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBVConst" ):
                return visitor.visitBVConst(self)
            else:
                return visitor.visitChildren(self)




    def bVConst(self):

        localctx = SygusParser.BVConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_bVConst)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(SygusParser.BVCONST)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnumConstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SygusParser.SymbolContext)
            else:
                return self.getTypedRuleContext(SygusParser.SymbolContext,i)


        def getRuleIndex(self):
            return SygusParser.RULE_enumConst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumConst" ):
                listener.enterEnumConst(self)
